--- a/src/assets/styles/pages/city.less
+++ b/src/assets/styles/pages/city.less
@@ -24,10 +24,50 @@
   .filter-row {
     height: 88px;
   }
-
+  @city-row-height: calc(~"100% - 47px - 88px");
   .city-row {
-    height: calc(~"100% - 47px - 88px");
-    background-color: #F4F4F4;
+    height: @city-row-height;
+    background-color: #EFEFF4;
     overflow-y: auto;
+
+    .hot-city {
+      height: 220px;
+      padding: 15px 10px;
+      .title {
+        font-size: 13px;
+        font-weight: 400;
+        color: #666;
+        margin-bottom: 6px;
+        label {
+          padding-left: 1px;
+        }
+      }
+      .content {
+        width: 100%;
+        height: 124px;
+
+        .city-square, .city-square-last {
+          width: 30.33%;
+          background: #fff;
+          text-align: center;
+          padding: 3px 0;
+          font-size: 14px;
+          border-radius: 4px;
+          border: 1px solid #e4e4e4;
+          float: left;
+          margin-bottom: calc((100% - 93%) / 2);
+        }
+        .city-square {
+          margin-right: calc((100% - 93%) / 2);
+        }
+
+      }
+
+    }
+
+    .sort-city {
+      height: 100%;
+    }
+
   }
 }
