1.选择城市页面 修改 2.索引列表组件 提交

--- a/src/assets/styles/pages/city.less
+++ b/src/assets/styles/pages/city.less
@@ -153,6 +153,16 @@
     }
   }
 
+  .mask {
+    height: calc(~"100% - 44px");
+    width: 100%;
+    position: absolute;
+    top: 44px;
+    left: 0;
+    background-color: #333333;
+    opacity: 0.5;
+  }
+
   .show {
     display: block;
   }
