--- a/src/assets/styles/pages/inTheaters.less
+++ b/src/assets/styles/pages/inTheaters.less
@@ -69,7 +69,7 @@
             flex: 0 0 56%;
             margin-left: 2%;
             line-height: normal;
-            .title, .grade, .director, .casts, .collect-count {
+            .title, .grade, .director, .casts, .collect-count, .no-stars {
               color: #777;
               font-size: 12px;
               display: block;
@@ -77,6 +77,9 @@
             .title {
               color: #000;
               font-size: 15px;
+            }
+            .no-stars {
+              margin-top: 4px;
             }
             .grade {
               display: initial;
