1.热映页面 增加 即将上映页面展示功能

--- a/src/assets/styles/pages/inTheaters.less
+++ b/src/assets/styles/pages/inTheaters.less
@@ -110,6 +110,18 @@
                 border-radius: 2px;
               }
             }
+            .presell, .wanna-see {
+              color: #EFAB32;
+              border: 1px solid #EFAB32;
+              font-size: 12px;
+              font-weight: 500 !important;
+              padding: 0 14px;
+              line-height: 2;
+              border-radius: 2px;
+              &:after {
+                border-radius: 2px;
+              }
+            }
           }
         }
       }
