--- a/src/assets/styles/global/icon.css
+++ b/src/assets/styles/global/icon.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'iconfont';  /* project id 342542 */
-    src: url('//at.alicdn.com/t/font_4xzdwdokieijm7vi.eot');
-    src: url('//at.alicdn.com/t/font_4xzdwdokieijm7vi.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_4xzdwdokieijm7vi.woff') format('woff'),
-    url('//at.alicdn.com/t/font_4xzdwdokieijm7vi.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_4xzdwdokieijm7vi.svg#iconfont') format('svg');
+    src: url('//at.alicdn.com/t/font_5xn3iqww8nu680k9.eot');
+    src: url('//at.alicdn.com/t/font_5xn3iqww8nu680k9.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_5xn3iqww8nu680k9.woff') format('woff'),
+    url('//at.alicdn.com/t/font_5xn3iqww8nu680k9.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_5xn3iqww8nu680k9.svg#iconfont') format('svg');
 }
 
 .icon-arrow {
@@ -12,7 +12,6 @@
     font-size: 20px;
     color: #000000;
 }
-
 .icon-arrow:before {
     content: attr(icon);
 }
@@ -22,8 +21,27 @@
     font-size: 20px;
     color: #fff;
 }
-
 .icon-dianying:before {
     content: attr(icon);
 }
 
+.icon-xing {
+    font-family: 'iconfont', serif;
+}
+.icon-xing:before {
+    content: attr(icon);
+}
+
+.icon-dianzan {
+    font-family: 'iconfont', serif;
+}
+.icon-dianzan:before {
+    content: attr(icon);
+}
+
+.icon-zan {
+    font-family: 'iconfont', serif;
+}
+.icon-zan:before {
+    content: attr(icon);
+}
