--- a/src/assets/styles/pages/movieDetail.less
+++ b/src/assets/styles/pages/movieDetail.less
@@ -2,6 +2,7 @@
   background-color: #fff;
   .vux-header {
     height: 47px;
+    padding: 0;
     background-color: #777CC0;
     border-bottom: none;
     .vux-header-left {
@@ -14,6 +15,8 @@
     }
     .vux-header-title {
       color: #fff;
+      height: 44px;
+      line-height: 44px;
       font-size: 15px;
       font-weight: 400 !important;
       letter-spacing: 1.2px;
@@ -22,6 +25,350 @@
         font-family: 'iconfont', serif;
         font-size: 21px;
         color: #fff;
+      }
+    }
+  }
+  .img-row {
+    background-color: #777CC0;
+    justify-content: center;
+    align-items: center;
+    display: -webkit-flex;
+    height: 280px;
+    margin-top: -13px;
+    img {
+      width: 170px;
+      height: 240px;
+    }
+  }
+  .introduction-row {
+    .name-item {
+      padding: 15px 20px;
+      border-bottom: 1px solid #e5e5e5;
+      display: flex;
+      justify-content: space-between;
+      flex-flow: row wrap;
+      align-items: baseline;
+      .name {
+        flex: 62%;
+        .title {
+          margin-bottom: 10px;
+        }
+      }
+      .grade {
+        width: 100px;
+        min-height: 87px;
+        box-shadow: 0 0 8px 2px #bbbaba;
+        text-align: center;
+        padding: 4px 0;
+        .number {
+          margin-bottom: -4px;
+        }
+      }
+      .watch {
+        flex: 1 1 100%;
+        width: 100%;
+        margin-top: 40px;
+        .want-see {
+          width: 35%;
+          margin-right: 1%;
+        }
+        .seen {
+          width: 62%;
+        }
+        .button {
+          color: #fbaf26;
+          border: 1px solid #fbaf26;
+          background-color: #fff;
+          padding: 6px 0;
+          border-radius: 2px;
+          font-size: 14px;
+          font-weight: 600 !important;
+        }
+      }
+      .large-font {
+        font-size: 18px;
+        font-weight: 600;
+      }
+      .small-font {
+        color: #777;
+        font-size: 12px;
+      }
+      .no-stars {
+        margin-top: 2px;
+        color: #777;
+        font-size: 12px;
+        display: block;
+      }
+    }
+    .introduction-item {
+      padding: 15px 20px;
+      .title {
+        color: #777;
+        font-size: 13px;
+        margin-bottom: 10px;
+      }
+      .summary {
+        font-size: 14px;
+        font-weight: 500 !important;
+        .unfold {
+          color: #3cc51f;
+        }
+      }
+    }
+    .actors-item {
+      padding: 15px 20px;
+      .title {
+        color: #777;
+        font-size: 13px;
+        margin-bottom: 10px;
+      }
+      .actors {
+        white-space: nowrap;
+        overflow-x: auto;
+        .actor-item {
+          width: 70px;
+          text-align: center;
+          margin-right: 10px;
+          display: inline-block;
+          img {
+            height: 90px;
+          }
+          .name {
+            width: 100%;
+            float: left;
+            text-align: center;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            span {
+              font-size: 13px;
+              font-weight: 500 !important;
+            }
+          }
+        }
+        .actor-item-last {
+          margin-right: 0;
+        }
+      }
+    }
+    .previews-item {
+      padding: 15px 20px;
+      .title {
+        color: #777;
+        font-size: 13px;
+        margin-bottom: 10px;
+      }
+      .preview {
+        white-space: nowrap;
+        overflow-x: auto;
+        .preview-item {
+          width: 70px;
+          text-align: center;
+          margin-right: 10px;
+          display: inline-block;
+          img {
+            height: 90px;
+          }
+        }
+        .preview-item-last {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+  .comment-row {
+    .vux-tab {
+      background-color: #f2f2f2;
+    }
+    .short-comment {
+      padding: 15px 20px;
+      .title {
+        padding: 15px 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: stretch;
+        align-content: space-between;
+        flex-flow: row nowrap;
+        span {
+          font-size: 16px;
+          font-weight: 500;
+        }
+        button {
+          background-color: #fff;
+          color: #04BE02;
+          border: 1px solid #04BE02;
+          border-radius: 2px;
+          padding: 2px 5px;
+          font-size: 12px;
+          font-weight: 600 !important;
+        }
+      }
+      .short-comment-item {
+        width: 100%;
+        margin: 16px 0;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: stretch;
+        align-content: stretch;
+        .user-img {
+          width: 30px;
+          height: 30px;
+          border-radius: 30px;
+          flex: 0 1 30px;
+        }
+        .short-comment-right {
+          flex: 0 1 85%;
+          .grade {
+            .username {
+              font-size: 13px;
+              font-weight: 600;
+            }
+            .vux-rater {
+              a {
+                margin-right: 0 !important;
+              }
+            }
+            .useful_count {
+              float: right;
+              font-size: 12px;
+              color: #777;
+              &:before {
+                content: '';
+                font-family: 'iconfont', serif;
+                font-size: 14px;
+                color: #999999;
+                margin-right: 2px;
+              }
+            }
+          }
+          .content {
+            font-size: 14px;
+            font-weight: 500;
+            margin-top: 2px;
+          }
+          .date {
+            font-size: 13px;
+            color: #777;
+            margin-top: 6px;
+          }
+        }
+      }
+      .all-comment {
+        text-align: center;
+        span {
+          font-size: 14px;
+          font-weight: 500;
+          color: #04be02;
+        }
+      }
+      .line {
+        margin: 10px -15px 0 -15px;
+        border-bottom: 1px solid #e5e5e5;
+      }
+    }
+    .movie-comment {
+      padding: 0 20px;
+      .title {
+        padding: 15px 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: stretch;
+        align-content: space-between;
+        flex-flow: row nowrap;
+        span {
+          font-size: 16px;
+          font-weight: 500;
+        }
+        button {
+          background-color: #fff;
+          color: #04BE02;
+          border: 1px solid #04BE02;
+          border-radius: 2px;
+          padding: 2px 5px;
+          font-size: 12px;
+          font-weight: 600 !important;
+        }
+      }
+      .movie-comment-item {
+        width: 100%;
+        margin: 16px 0;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: stretch;
+        align-content: stretch;
+        .user-img {
+          width: 30px;
+          height: 30px;
+          border-radius: 30px;
+          flex: 0 1 30px;
+        }
+        .movie-comment-right {
+          flex: 0 1 85%;
+          .grade {
+            .username {
+              font-size: 13px;
+              font-weight: 600;
+            }
+          }
+          .content {
+            font-size: 14px;
+            font-weight: 500;
+            margin-top: 2px;
+          }
+        }
+      }
+      .all-comment {
+        text-align: center;
+        span {
+          font-size: 14px;
+          font-weight: 500;
+          color: #04be02;
+        }
+      }
+      .line {
+        margin: 10px -15px 0 -15px;
+        border-bottom: 1px solid #e5e5e5;
+      }
+    }
+  }
+  .intelligent-row {
+    background-color: #EFEFF4;
+    padding: 15px 20px;
+    .title {
+      font-size: 14px;
+      font-weight: 400;
+      margin-bottom: 10px;
+    }
+    .intelligent {
+      white-space: nowrap;
+      overflow-x: auto;
+      .movie-item {
+        width: 70px;
+        text-align: left;
+        margin-right: 10px;
+        display: inline-block;
+        img {
+          height: 90px;
+        }
+        .name {
+          width: 100%;
+          float: left;
+          text-align: left;
+          font-size: 13px;
+          font-weight: 500 !important;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+        .grade {
+          width: 100%;
+          float: left;
+          text-align: left;
+          font-size: 13px;
+          font-weight: 500 !important;
+        }
       }
     }
   }
